--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
     <div id="gameScene">
         <h3>Pontszám: Én <span id="meScores">0</span> - Ellenség <span id="enemyScores">0</span></h3>
         <div class="enemy">
-            <img id="enemyPaper" class="pics enemyPics" src="/imgs/paper.png" alt="">
-            <img id="enemyRock" class="pics enemyPics" src="/imgs/rock.png" alt="">
-            <img id="enemyScissor" class="pics enemyPics" src="/imgs/scissor.png" alt="">
+            <img id="enemyPaper" class="pics enemyPics" src="/imgs/paper.png" alt="paper">
+            <img id="enemyRock" class="pics enemyPics" src="/imgs/rock.png" alt="rock">
+            <img id="enemyScissor" class="pics enemyPics" src="/imgs/scissor.png" alt="scissor">
             <hr>
         </div>
         <div class="me">
-            <img onclick="chooseRock()" class="pics" src="/imgs/rock.png" alt="">
-            <img onclick="choosePaper()" class="pics" src="/imgs/paper.png" alt="">
-            <img onclick="chooseScissor()" class="pics" src="/imgs/scissor.png" alt="">
+            <img onclick="chooseRock()" class="pics" src="/imgs/rock.png" alt="rock">
+            <img onclick="choosePaper()" class="pics" src="/imgs/paper.png" alt="paper">
+            <img onclick="chooseScissor()" class="pics" src="/imgs/scissor.png" alt="scissor">
         </div>
 
     </div>
