--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <hr>
         </div>
         <div class="me">
-            <img onclick="chooseRock()" class="pics" src="/imgs/rock.png" alt="rock">
+            <img onclick="chooseRock()" class="pics" src="/imgs/ko.jpg" alt="rock">
             <img onclick="choosePaper()" class="pics" src="/imgs/paper.png" alt="paper">
             <img onclick="chooseScissor()" class="pics" src="/imgs/scissor.png" alt="scissor">
         </div>
