--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <h1 id="prompt"></h1>
         <button id="reStartButton" onclick="reStart()">RESTART</button>
     </div>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 
 </body>
 
